#9 코드리뷰 반영 - 메서드 명명 규칙 변경 - 서비스 메서드 시그니처에 에러 추가 - 테스트 메서드 displayName 변경 - itemStatus 메서드 통합 - 무의미한 파일 제거